--- a/index.html
+++ b/index.html
@@ -129,6 +129,6 @@
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
-    <script async src="http://www.google-analytics.com/analytics.js"></script>
+   <!-- <script async src="http://www.google-analytics.com/analytics.js"></script>-->
   </body>
 </html>
